--- a/variables.html
+++ b/variables.html
@@ -119,7 +119,9 @@
             </div>
         </div>
         <br>
-        <div class="para">
+
+        
+        <div class="First-Para">
             כאשר אנחנו רושמים signed int אנחנו אומרים למחשב שזה משתנה מסוג int אשר יכול להכיל גם מספרים חיובים וגם
             מספרים
             שלילים.
@@ -132,9 +134,9 @@
             <br>
             חשוב לציין ש int name שקול להצהרה של signed int name לכן טווח המספרים כאן זהה
         </div>
+
         <br>
-        <br>
-        <br>
+    
         <!-- DOUBLE -->
         <h1 class="head-right">double</h1>
         <div class="row">
@@ -183,7 +185,7 @@
                 </figure>
             </div>
         </div>
-        <div class="para">
+        <div class="First-Para">
             כאשר אנחנו רושמים signed double אנחנו אומרים למחשב שזה משתנה מסוג double אשר יכול להכיל גם מספרים חיובים וגם
             מספרים
             שלילים.
@@ -290,7 +292,7 @@
             </div>
         </div>
 
-        <div class="para">
+        <div class="First-Para">
             <p>
                 <br>טווח מספרים- כאשר אנחנו משתמשים ב char טווח המספרים שלו נע
                 בין מינוס 2<sup>7</sup> לבין 2<sup>7</sup> פחות אחד.<br>
@@ -356,7 +358,8 @@
                 </figure>
             </div>
         </div>
-        <div class="para">
+
+        <div class="First-Para">
             <br>טווח מספרים- כאשר אנחנו משתמשים ב float טווח המספרים שלו נע בין מינוס
             <span dir="ltr">3.40282x10<sup>38</sup></span>
             לבין <span dir="ltr">3.40282x10<sup>38</sup></span>.
@@ -411,7 +414,7 @@
                 </figure>
             </div>
         </div>
-        <div class="para">
+        <div class="First-Para">
             <p>
                 טווח - טווח המספרים של short רגיל הוא בין 32,767 לבין 32,768- ו unsigned short נע בין 0 ל 65,535
             </p>
