--- a/index.html
+++ b/index.html
@@ -56,34 +56,35 @@
   </div>
   <section id="main" onclick="openOrCloseNav(0)">
     <h1 class="head-left">Let's learn C</h1>
-    <h1 class="head-right">מי אנחנו?</h1>
+    <h1 class="head-right">ברוכים הבאים לאתר שלנו Let’s learn C</h1>
 
+    <h2 class="head-right">   קצת עלינו :</h2>
     <div class="First-Para">
-      <p>היי, ברוכים הבאים לאתר שלנו Let's learn C.
-        <br>
-        אנו שלושה סטודנטים מהמכון הטכנולוגי בחולון שמתחילים את שנתם השנייה.
-        <br>
-        בתור סטודנטים שעברו את שנה א' אנו יודעים כמה מייגעת וקשה היא, כמה מעט חומר בעברית יש
-        על שפת סי ואם כבר יש חומר על השפה הזו, הוא בד"כ ישן , לא מעודכן , לא מובן ובעיקר לא נוח לקריאה.
-        <br>
-        אז בתור פרויקט לקחנו על עצמנו הכנת אתר זה שמטרתו לעזור לסטודנטים אחרים (ובעצם לכל מי שרוצה ללמוד את הבסיס של שפת
-        סי) ללמוד.
-        חשוב לנו מאוד לציין, שמדובר בשפה שלא נחשבת לקלה בתור שפה ראשונה, אבל היתרונות שלה על שפת אחרות הוא בכך שכאשר
-        עבודה
-        נעשית בשפת סי היא נעשית ברמה מאוד נמוכה מבחינת המעבד <br>(low level) ובשל כך אנו לומדים קצת יותר טוב מה קורה
-        בתחתית.
-        <br>
-        <br>
-        קצת עלינו:
-        <br>
-        להב הררי – הוגה הפרויקט , מפתח , בעל ציון סופי 100 בקורס "מבוא למדעי המחשב"
-        <br>
-        זיו הוכמן – מפתח ווב , בעל ציון סופי 99 בקורס "מבוא למדעי המחשב"
-        <br>
-        אנזור טוריקאשווילי – מפתח ווב, בעל ציון סופי 89 בקורס "מבוא למדעי המחשב".
-        <br>
-        קישורים:
+    
+      שלושה סטודנטים למדעי המחשב במכון הטכנולוגי חולון – בוגרי הקורס "מבוא למדעי המחשב" בשפת c בציונים גבוהים.
+      <br>
+      להב הררי – הוגה הפרויקט, מתכנת. 
+      <br>
+      זיו הוכמן – מתכנת.
+      <br>
+      אנזור טוריקאשווילי – מתכנת.
+ 
+      
       </p>
+    </div>
+
+    <h2 class="head-right">הסיבה שבגללה החלטנו לעשות את הפרויקט הזה:</h2>
+    <div class="First-Para">
+      בתור סטודנטים שעברו את שנה א' אנו יודעים כמה מייגעת וקשה היא, כמה מעט חומר בעברית יש על שפת c באתרים חיצוניים ואם כבר יש חומר הוא בד"כ ישן , לא מעודכן , לא מובן ובעיקר לא נוח לקריאה.
+      לכן, החלטנו ליצור אתר שמסביר בשפה ברורה (עד כמה שאפשר כמובן) ומלא בדוגמאות קוד שניתן להעתיק לתוך סביבת העבודה של הלומד. 
+      <br>
+      מקווים מאוד שהצלחנו לעזור, מוזמנים ליצור קשר במידה ומצאתם טעות / יש לכם רעיון לשיפור התוכן באתר.
+      <br>
+      כתובת המייל שלי:
+      Lahavitsme0@gmail.com   
+      <br>
+      <br>
+      <a href="mailto:Lahavitsme0@gmail.com">ניתן לשלוח מייל פה</a>
     </div>
 
   </section>
