--- a/variables.html
+++ b/variables.html
@@ -59,10 +59,10 @@
         <h1 class="head-right">משתנים</h1>
         <div class="para">
             <p>
-                משתנים הינם עצמים שמטרתם היא לאחוז בסוגי נתונים שונים.
-                <br>
-                כל סוג משתנה תופס כמות שונה של מקום בזיכרון ויכול להחזיק נתונים שונים.
-                <br>
+                משתנים הינם עצמים שמטרתם היא לאחוז בסוגי נתונים שונים.<br> כל סוג משתנה טופס סוג שונה של מקום בזיכרון
+                ויכול
+                להחזיק
+                נתונים שונים.<br>
             </p>
         </div>
         <!-- INT -->
@@ -119,9 +119,7 @@
             </div>
         </div>
         <br>
-
-
-        <div class="First-Para">
+        <div class="para">
             כאשר אנחנו רושמים signed int אנחנו אומרים למחשב שזה משתנה מסוג int אשר יכול להכיל גם מספרים חיובים וגם
             מספרים
             שלילים.
@@ -134,9 +132,9 @@
             <br>
             חשוב לציין ש int name שקול להצהרה של signed int name לכן טווח המספרים כאן זהה
         </div>
-
         <br>
-
+        <br>
+        <br>
         <!-- DOUBLE -->
         <h1 class="head-right">double</h1>
         <div class="row">
@@ -185,15 +183,15 @@
                 </figure>
             </div>
         </div>
-        <div class="First-Para">
+        <div class="para">
             כאשר אנחנו רושמים signed double אנחנו אומרים למחשב שזה משתנה מסוג double אשר יכול להכיל גם מספרים חיובים וגם
             מספרים
             שלילים.
             <br>
-            כאשר אנחנו רושמים unsigned double אנחנו אומרים למחשב שזה משתנה שיכול להכיל רק מספרים חיובים.
+            כאשר אנחנו רושמים unsigned int אנחנו אומרים למחשב שזה משתנה שיכול להכיל רק מספרים חיובים.
             <br>טווח מספרים- כאשר אנחנו משתמשים ב double טווח המספרים שלו נע
             בין מינוס 2<sup>63</sup> לבין 2<sup>63</sup> פחות אחד.<br>
-            וכאשר אנו משתמשים במשתנה מסוג <span dir="ltr">unsigned double</span> טווח המספרים שלו נע בין אפס לבין
+            וכאשר אנו משתמשים במשתנה מסוג <span dir="ltr">unsigned int</span> טווח המספרים שלו נע בין אפס לבין
             2<sup>64</sup>.<br>
             <br>
             חשוב לציין ש double name שקול להצהרה של signed double name לכן טווח המספרים כאן זהה
@@ -202,22 +200,15 @@
         <!-- CHAR -->
         <br>
         <h1 class="head-right">char</h1>
-        <div class="First-Para">
-            משתנה מסוג char הוא משתנה שתופס ביט אחד בזיכרון והוא מכיל תווים כמו: a A , : ; 1 2 ^.
-        </div>
-
-
         <div class="row">
             <div class="col-md-6">
                 <div class="para">
                     <p>
+                        משתנה מסוג char הוא משתנה שתופס ביט אחד בזיכרון והוא מכיל תווים כמו: a A , : ; 1 2 ^.<br>
                         הצהרה - כדי ליצור משתנה מסוג char אנחנו נרשום את ההצהרה הבאה: <br><br><br>
                     </p>
                 </div>
             </div>
-
-            <br>
-
             <div class="col-md-6">
                 <figure class="code">
                     <figcaption id="example1-caption">CODE 5:</figcaption>
@@ -231,13 +222,6 @@
                 </figure>
             </div>
         </div>
-        
-        <div class="First-Para">
-
-            <!--SPACE-->
-
-        </div>
-
         <div class="row">
             <div class="col-md-6">
                 <div class="para">
@@ -306,7 +290,7 @@
             </div>
         </div>
 
-        <div class="First-Para">
+        <div class="para">
             <p>
                 <br>טווח מספרים- כאשר אנחנו משתמשים ב char טווח המספרים שלו נע
                 בין מינוס 2<sup>7</sup> לבין 2<sup>7</sup> פחות אחד.<br>
@@ -372,8 +356,7 @@
                 </figure>
             </div>
         </div>
-
-        <div class="First-Para">
+        <div class="para">
             <br>טווח מספרים- כאשר אנחנו משתמשים ב float טווח המספרים שלו נע בין מינוס
             <span dir="ltr">3.40282x10<sup>38</sup></span>
             לבין <span dir="ltr">3.40282x10<sup>38</sup></span>.
@@ -428,7 +411,7 @@
                 </figure>
             </div>
         </div>
-        <div class="First-Para">
+        <div class="para">
             <p>
                 טווח - טווח המספרים של short רגיל הוא בין 32,767 לבין 32,768- ו unsigned short נע בין 0 ל 65,535
             </p>
