--- a/arrays.html
+++ b/arrays.html
@@ -133,8 +133,8 @@
           שלו).<br> <span dir="ltr">int arr[] = {1,2,3,4,5};</span>
         </li>
         <li>
-          מערך בגודל 3 שבו הכנסנו ערכים לשני האיברים הראשונים, באיבר השלישי קיים
-          ערך שנקרא "ערך זבל" – שמשמעותו אומרת שזה ערך שאין להתייחס אליו ללא אתחול.
+          מערך בגודל 3 שבו הכנסנו ערכים לשני האיברים הראשונים, באיבר השלישי הערך יהיה שווה ל-0.
+          <br>
           <span dir="ltr">double arr[3] = {1,2};</span>
         </li>
         <li>
