--- a/insertionSort.html
+++ b/insertionSort.html
@@ -56,152 +56,308 @@
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
   <section id="main" onclick="openOrCloseNav(0)">
-    <h1 class="top-left">Lets learn C</h1>
 
-    <h2 class="top-right-head">מיון הכנסה</h2>
+    <h1 class="head-left">Let's learn C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
+    <h1 class="head-right">מיון הכנסה</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
 
-    <p class="top-right">
-      מיון הכנסה נחשב למיון "מבוסס השוואות" והוא עובד בצורה הבאה.
+    <!--מיון הכנסה-->
+    <div class="First-Para">
+      <p>
+        מיון הכנסה נחשב למיון "מבוסס השוואות" , תפקידו לסדר את המערך מהקטן לגדול (ניתן לשנות את האלגוריתם כך שימיין
+        מהגדול לקטן).
+      </p>
+    </div>
+
+    <br>
+    <h3 class="head-right">נראה תהליך זה על ידי דוגמה על המערך הבא:</h3>
+
+    <!--מיון זה מתבצע בצורה הבאה-->
+    <div class="First-Para">
+      <p>
+        ראשית, אנו מתחילים מתא מספר אחד במערך (כלומר התא השני – כפי שזכור לנו הספירה בתכנות מתבצעת לעיתים קרובות מאוד
+        מ0).
+        <br>
+        אנו מכניסים את הערך שבתוך התא למשתנה עזר שנקרא לו temp ולאחר מכן נתחיל לבצע השוואה בין המשתנה temp לבין כל
+        האיברים שנמצאים משמאלו (כלומר אם עכשיו אנחנו נמצאים בתא i אז אנחנו נבצע את הבדיקות מתא i-1 עד לתא 0 כולל).
+        <br>
+        אנו נשתמש כאן ב2 אינדקסים האחד הוא i שמציין את התא הנוכחי שעליו אנו נמצאים ואינדקס j שתמיד יתחיל מהתא i-1.
+        <br>
+        כאשר אנו עושים את ההשוואה: אם האיבר בתא j גדול יותר מהערך שבתוך המשתנה temp אז, אנחנו לוקחים את הערך בתא j
+        ומכניסים
+        אותו לתא j+1.
+        <br>
+        לאחר מכן, אנו נמשיך בבדיקות עד שנעבור את תא מספר אפס או עד שאנחנו נגיע לתא שהערך שבתוכו קטן יותר מהערך שבתוך
+        משתנה temp.
+      </p>
+    </div>
+
+
+    <br>
+    <h3 class="head-right">תהליך המיון:</h3>
+
+
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_1.png" alt="">
+
+
+    <!--תהליך המיון-->
+    <div class="First-Para">
+      <p>
+        משתנה העזר שלנו temp יכיל כעת את הערך שנמצא בתא מספר 1 במערך (7).
+        <br>
+        <br>
+        כעת אנחנו מתחילים לבצע את ההשוואה בין הערכים מתא מספר 0 לצד שמאל.
+      </p>
+    </div>
+
+
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_2.png" alt="">
+    <br>
+    <div class="First-Para">
+      <img  src="assest/TablesForInsertionSort/Insertion_sort_3.png" alt="">
+    </div>
+
+    <!--תהליך מיון-->
+    <div class="First-Para">
+      <p>
+        בגלל ש 7 גדול מ 2 אז אנחנו יודעים בוודאות שכל האיברים בצד השמאלי יהיו קטנים יותר מ 7.
+        <br>
+        לכן עוצרים כאן את הסבב הראשון של הבדיקות והמערך נשאר ללא שינוי.
+      </p>
+    </div>
+
+
+    <!--תהליך מיון-->
+    <div class="First-Para">
+      <p>
+        <br>
+        <br>
+        כעת אנו עוברים ל תא מספר 2 ומכניסים את הערך שלו (4) למשתנה temp ומתחילים השוואות אל מול התאים משמאלו.
+      </p>
+    </div>
+
+
+    <!--תהליך מיון-->
+    <div class="First-Para">
+      <p>
+        משווים ראשית מול תא מספר 1 ורואים שהערך 7 גדול מהערך 4.
+      </p>
+    </div>
+
+
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_4.png" alt="">
+
+    <div class="First-Para">
+      <img  src="assest/TablesForInsertionSort/Insertion_sort_5.png" alt="">
+    </div>
+
+    <div class="First-Para">
+      <p>
+        לכן נכניס את הערך 7 לתא מספר 2.
+        <br>
+        בשלב זה תא מספר 1 נשאר ללא שינוי והמערך שלנו יראה כך :
+      </p>
+    </div>
+
+
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_6.png" alt="">
+
+    <div class="First-Para">
       <br>
+      עכשיו אנחנו עושים השוואה בין תא מספר 0 למשתנה ה temp ואנחנו רואים שהערך 4 גדול יותר מהערך 2 ולכן אנחנו עוצרים
+      כאן את הבדיקות.
       <br>
-      ראשית, אנו מתחילים מתא מספר אחד במערך (כלומר התא השני – כפי שזכור לנו הספירה בתכנות מתבצעת לעיתים קרובות מאוד מ0).
-      אנו מכניסים את הערך שבתוך התא אל תוך משתנה עזר שנקרא לו temp ולאחר מכן נתחיל לבצע השוואה בין המשתנה temp לבין כל
-      האיברים שנמצאים לפני האיבר הנוכחי שבו אנו נמצאים (כלומר אם עכשיו אנחנו נמצאים בתא j אז אנחנו נבצע את הבדיקות מתא
-      j-1
-      עד לתא 0 כולל).
-      אנו נשתמש כאן ב2 אינדקסיים האחד הוא j שהוא מציין את התא הנוכחי שעליו נמצאים ואינדקס i שתמיד יתחיל מהתא j-1.
+      הערך 4 יכנס לתוך תא מספר 1.
       <br>
+      הסיבה לכך שהערך יכנס לתא מספר 1 הוא כי אנו יודעים (במהלך הבדיקה) שהגענו לערך בהכרח קטן מ-temp ולכן התא מימינו
+      הוא התא שנכון להכניס אליו את הערך ב-temp.
       <br>
-      כאשר אנו עושים את ההשוואה, אם האיבר בתא i-1 גדול יותר מהערך שבתוך המשתנה x אז אנחנו לוקחים את הערך הזה (שגדול יותר
-      מהערך שבתוך המתשנה temp שלנו ) ומכניסים אותו לתא i+1 וממשיכים בבדיקות עד שנעבור את תא מספר אפס או עד שאנחנו נגיע
-      לתא
-      שהערך שבתוכו קטן יותר מהערך שבתוך משתנה temp.
-      <br>
-      <br>
-      כעת נראה איך מתבצע התהליך:
-      <br>
-      המערך ההתחלתי שלנו יכול למשל להיראות כך:
-      <br>
-      <img src="assest/tableForInsertionSort/1.png" alt="">
-      <br>
-      משתנה העזר שלנו temp יכיל כעת את הערך שנמצא בתא מספר 1 במערך שהוא המספר 7.
-      כעת אנחנו מתחילים לבצע את ההשוואה בין הערכים מתא מספר 0 כלפי מטה.
-      בגלל ש 7 גדול מ 2 אז אנחנו יודעים בוודאות שכל האיברים הלאה יהיו קטנים יותר מ 7 והם ממוינים לכן אי צורך לשינוי.
-      <br>
-      <img src="assest/tableForInsertionSort/2.png" alt=""><img src="assest/tableForInsertionSort/3.png" alt="">
-      <br>
-      <br>
-      <br>
-      כעת אנו עוברים ל תא מספר 2 ומכניסים את הערך שלו 4 למשתנה temp ומתחילים השוואות אל מול התאים מצד שמאל של 4.
-      משווים ראשית ל תא מספר 1 ורואים ש 7 גדול מ 4.
-      <br>
-      <img src="assest/tableForInsertionSort/4.png" alt=""><img src="assest/tableForInsertionSort/5.png" alt="">
-      <br>
-      לכן נכניס 7 לתא מספר 2.
-      בשלב זה תא מספר 1 נשאר ללא שינוי.
-      המערך שלנו יראה כך :
-      <br>
-      <img src="assest/tableForInsertionSort/6.png" alt="">
-      <br>
-      <br>
-      עכשיו אנחנו עושים השוואה בין תא מספר 0 למשתנה ה temp ואנחנו רואים ש4 גדול יותר מ 2.
-      <br>
-      <img src="assest/tableForInsertionSort/7.png" alt=""><img src="assest/tableForInsertionSort/5.png" alt="">
-      <br>
-      לכן אנחנו עוצרים כאן את הבדיקות ו4 יכנס לתוך תא מספר 1 (למה תא מספר 1 ? חשוב לזכור שאנחנו השתמשנו כאן ב 2 אינדקסים
-      i
-      ו j האינדקס i תמיד יהיה שווה ל j-1 וכאשר אנחנו הגענו למצב שהערך במשתנה עזר שלנו יותר גדול מהערך שנמצא בתא של המערך
-      אז אנחנו מכניסים את הערך שבתוך משתנה העזר שלנו לi+1 במקרה שלנו i היה שווה ל 0 ו i+1 יתן לנו את תא מספר 1). המערך
-      שלנו יראה כך:
-      <br>
-      <img src="assest/tableForInsertionSort/8.png" alt="">
-      <br>
-      <br>
-      <br>
-      כעת אנחנו נתחיל את הסבב השלישי שלנו ואנו נכניס לתוך המשתנה temp את הערך שנמצא בתוך תא מספר 3 שזה 3 , כעת נתחיל
-      להשוואות את הערך 3 למה שנמצא בתא מספר 2 שזה הערך 7.
-      <br>
-      <img src="assest/tableForInsertionSort/9.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
-      <br>
-      בגלל ש 3 קטן מ 7 אז אנחנו מבצעים החלפה , 7 ייכנס לתא מספר 3 והמערך שלנו יראה כך:
-      <br>
-      <img src="assest/tableForInsertionSort/11.png" alt="">
-      <br>
-      <br>
-      <br>
-      לאחר מכן אנחנו משווים את הערך 3 לתא מספר 1 שהוא הערך 4.
-      <br>
-      <img src="assest/tableForInsertionSort/12.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
+      במקרה שלנו j היה שווה ל 0 ו j+1 ייתן לנו את תא מספר 1 והמערך שלנו יראה כך:
+      </p>
+    </div>
+
+
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_7.png" alt="">
+
+
+    <!--תהליך מיון-->
+    <div class="First-Para">
+      <p>
+        כעת אנו נתחיל את הסבב השלישי שלנו ונכניס לתוך המשתנה temp את הערך שנמצא בתוך תא מספר 3 (3).
+        <br>
+        כעת נתחיל להשוות את הערך 3 למה שנמצא בתא מספר 2 שזה הערך 7.
+      </p>
+    </div>
+
+
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_8.png" alt="">
+
+
+    <div class="First-Para">
+      <img src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
+    </div>
+
+
+    <div class="First-Para">
+      <p>
+        בגלל שהערך 3 קטן מהערך 7 אנו נבצע החלפה. הערך 7 יכנס לתא מספר 3 והמערך יראה כך:
+      </p>
+    </div>
+
+
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_10.png" alt="">
+
+
+    <!--תהליך מיון-->
+    <div class="First-Para">
+      <p>
+        <br>
+        לאחר מכן אנחנו משווים את הערך 3 לערך שבתא מספר 1 שהוא 4.
+      </p>
+    </div>
+
+
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_11.png" alt="">
+
+
+    <div class="First-Para">
+      <img  src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
+    </div>
+
+
+    <div class="First-Para">
       <br>
       בגלל ש 3 קטן מ 4 אז גם כאן מתבצע שינוי והמערך שלנו יראה כעת כך:
-      <br>
-      <img src="assest/tableForInsertionSort/13.png" alt="">
-      <br>
-      <br>
-      <br>
-      כל עוד הערך בתוך משתנה העזר שלנו תמיד קטן יותר אז אנחנו מכניסים את הערכים של התאים לתוך i+1. אפשר לראות את זה כמו
-      "הזזה של כל המערך קדימה".
-      <br>
-      לאחר מכן משווים את הערך 3 לערך 2 שנמצא בתוך תא מספר 0.
-      <br>
-      <img src="assest/tableForInsertionSort/14.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
-      <br>
-      ניתן לראות שהערך 3 גדול מהערך 2 ולכן עוצרים כאן את ההשוואות ומכניסים את הערך 3 לתוך תא מספר 1 וכעת המערך שלנו יראה
-      כך:
-      <br>
-      <img src="assest/tableForInsertionSort/15.png" alt="">
-      <br>
-      <br>
-      <br>
-      כעת אנחנו עושים את הסבב הרביעי שלנו וזה גם יהיה האחרון כי הגענו לסוף המערך , לא קשה לראות ש 8 גדול יותר מכל
-      האיברים
-      במערך ולכן כבר על ההשוואה הראשונה של 8 ל 7 אנחנו נבין שהמערך כבר ממוין ולכן אין צורך להמשיך בהשוואות והמערך הסופי
-      שלנו יראה כך:
-      <br>
-      <img src="assest/tableForInsertionSort/16.png" alt="">
-      <br>
-      וכך מתבצע מיון הכנסה.
-      <br>
-      <br>
-      <br>
-      דוגמה לקוד של מיון הכנסה:
-      <br>
-      <!--CODE
-        void insertion_sort(int *arr , int size)
-        {
-            int  temp , i , j , flag;
-            for(i = 0 ; i < size ; i++)
-            {
-                j = i-1;
-                flag = 1;
-                temp = arr[i];
-                while(j >= 0 && flag == 1)
-                {
-                    if( temp < arr[j] )
-                    {
-                        arr[j+1] = arr[j];
-                    }
-                    else
-                    {
-                        arr[j+1] = temp;
-                        flag =0;
-                    }
-                    j--;
-                }
-            }
-        }
+    </div>
 
-      END CODE-->
-      <br>
-      • חשוב לציין שהקוד הזה הוא לא יחיד וקיימות עוד גרסאות עבורו (חלקן אף יעילות יותר)
-      <br>
-      משתנה ה flag אומר לנו אם אנחנו הגענו למצב שבו הערך שבתוך המשתנה temp שלנו גדול יותר מכל הערכים של התאים בצד שמאל
-      או
-      לא , במידה וכן אז אנחנו משנים את הערך של flag לאפס ואז ממשיכים לסבב הבא. במידה ולא אז אנחנו ממשיכים את הבדיקה .
-      i ו j אלו הם האינדקסים שבעזרתם אנחנו זזים במערכים כאשר j מסמל לנו את התא שהערך שלו יכנס למשתנה temp ו-i מציין את
-      כל
-      האיברים שאותם אנחנו נשווה ל temp.
 
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_12.png" alt="">
+
+
+    <!--תהליך מיון-->
+    <div class="pic" class="First-Para">
+      <p>
+        <br>
+        לאחר מכן משווים את הערך 3 לערך 2 שנמצא בתוך תא מספר 0.
+      </p>
+    </div>
+
+
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_13.png" alt="">
+
+
+    <div class="First-Para">
+      <img src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
+    </div>
+
+
+    <div class="First-Para">
+      <p>
+        ניתן לראות שהערך 3 גדול מהערך 2.
+        <br>
+        לכן נעצור בשלב זה את ההשוואות ונכניס את הערך 3 לתוך תא מספר 1 וכעת המערך יראה כך:
+      </p>
+    </div>
+
+
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_14.png" alt="">
+
+
+    <!--תהליך מיון-->
+    <div class="First-Para">
+      <p>
+        <br>
+        כעת אנחנו עושים את הסבב הרביעי שלנו וזה יהיה הסבב האחרון כי הגענו לסוף המערך.
+
+        <br>
+        לא קשה לראות שהערך 8 גדול יותר מכל האיברים במערך.
+
+        <br>
+        לכן כבר על ההשוואה הראשונה של הערך 8 לערך 7 אנו נבין שהמערך ממוין.
+
+        <br>
+        אין צורך להמשיך בהשוואות והמערך הסופי שלנו יראה כך:
+
+        <br>
+      </p>
+    </div>
+
+
+    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_14.png" alt="">
+
+    
+    <div class="First-Para">
+      <p>
+        ובכך מסיימים את מיון ההכנסה.
+      </p>
+    </div>
+
+    <br>
+    <h3 class="head-right">דוגמה לקוד של מיון הכנסה:</h3>
+
+    <!--דוגמה לקוד-->
+    <div class="row">
+
+      <div class="col-md-6">
+
+        <div class="para">
+
+          <p>
+            זמן ריצה של מיון הכנסה במקרה הטוב ביותר עומד בסדר גודל O(n) ובמקרה הגרוע ביותר בסדר גודל של
+            O(n<sup>2</sup>).
+
+            <br>
+            רצוי לציין שזה אינו אלגוריתם היחיד שמממש מיון הכנסה וקיימים כמה גרסאות של המיון הזה.
+          </p>
+        </div>
+
+
+      </div>
+
+
+      <div class="col-md-6">
+
+
+        <figure class="code">
+          <figcaption id="example1-caption">CODE 1:</figcaption>
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
+<b>void</b> insertion_sort(<b>int</b> <i>*arr</i>,<b>int</b> <i>size</i>)
+{
+  <b>int</b> temp, i,j;
+  <b>for</b>(i=1 ; i &lt; <i>size</i> ; i++)
+  {
+    temp = <i>arr</i>[i];
+    j = i - 1;
+
+    <b>while</b>(j >= 0 && temp &lt; arr[j])
+    {
+      <i>arr</i>[j +1] = <i>arr</i>[j];
+      j = j - 1;
+    }
+
+    <i>arr</i>[j + 1] = temp;
+  }
+}
+            </code></pre>
+        </figure>
+
+      </div>
+
+    </div>
+
+
+    <div class="First-Para">
+      <p>
+        i ו j אלו הם האינדקסים שבעזרתם אנו זזים בין תאים במערך.
+
+        <br>
+        i מסמל לנו את התא שהערך שלו יכנס למשתנה temp ו-j מציין את כל האיברים שאותם אנחנו נשווה לtemp.
+
+        <br>
+        while(j >= 0 && temp &lt; arr[j]) – כל עוד לא הגענו לתא אפס וכל עוד הערך במשתנה העזר שלנו קטן יותר מאיברי המערך
+        נמשיך לבצע החלפות של הערכים בתאים. </p>
+    </div>
+
+  </section>
 </body>
 
 </html>
