--- a/variables.html
+++ b/variables.html
@@ -57,7 +57,8 @@
     <section id="main" onclick="openOrCloseNav(0)">
         <h1 class="head-left">Let's learn C</h1>
         <h1 class="head-right">משתנים</h1>
-        <div class="para">
+        
+        <div class="First-Para">
             <p>
                 משתנים הינם עצמים שמטרתם היא לאחוז בסוגי נתונים שונים.<br> כל סוג משתנה טופס סוג שונה של מקום בזיכרון
                 ויכול
@@ -119,7 +120,7 @@
             </div>
         </div>
         <br>
-        <div class="para">
+        <div class="First-Para">
             כאשר אנחנו רושמים signed int אנחנו אומרים למחשב שזה משתנה מסוג int אשר יכול להכיל גם מספרים חיובים וגם
             מספרים
             שלילים.
@@ -139,7 +140,7 @@
         <h3 class="head-right">double</h3>
         <div class="row">
             <div class="col-md-6">
-                <div class="para">
+                <div class="First-Para">
                     <p>
                         משתנה מסוג double הוא משתנה שתופס 8 בתים בזיכרון והוא מכיל מספרים שלמים ועשרוניים כמו:<br> 1, 2,
                         3.1, 31 וכו'.<br>
@@ -163,7 +164,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <div class="para">
+                <div class="First-Para">
                     <p>
                         גם כאן יש את האופציה להצהיר עליו כ signed ו unsigned וההצהרות יהיו כך:
                     </p>
@@ -183,7 +184,7 @@
                 </figure>
             </div>
         </div>
-        <div class="para">
+        <div class="First-Para">
             כאשר אנחנו רושמים signed double אנחנו אומרים למחשב שזה משתנה מסוג double אשר יכול להכיל גם מספרים חיובים וגם
             מספרים
             שלילים.
@@ -202,7 +203,7 @@
         <h3 class="head-right">char</h3>
         <div class="row">
             <div class="col-md-6">
-                <div class="para">
+                <div class="First-Para">
                     <p>
                         משתנה מסוג char הוא משתנה שתופס ביט אחד בזיכרון והוא מכיל תווים כמו: a A , : ; 1 2 ^.<br>
                         הצהרה - כדי ליצור משתנה מסוג char אנחנו נרשום את ההצהרה הבאה: <br><br><br>
@@ -224,7 +225,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <div class="para">
+                <div class="First-Para">
                     <p>
                         משתנים מסוג char הם אומנם תווים אבל ניתן לייצג אותם גם בעזרת מספרים מתוך טבלת ascii לדוגמה:
                         <br><br><br><br>
@@ -246,7 +247,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <div class="para">
+                <div class="First-Para">
                     <p>
                         כעת יצרנו משתנה שמכיל תו A , תו זה מוכר בטבלת ה ascii כמספר 65 , אם אנחנו נרשום את הדבר
                         הבא:<br><br>
@@ -269,7 +270,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <div class="para">
+                <div class="First-Para">
                     <p>
                         גם כאן אפשר להצהיר על משתנה זה בעזרת signed ו unsigned וזה מתבצע כך: <br><br> <br><br>
                     </p>
@@ -290,7 +291,7 @@
             </div>
         </div>
 
-        <div class="para">
+        <div class="First-Para">
             <p>
                 <br>טווח מספרים- כאשר אנחנו משתמשים ב char טווח המספרים שלו נע
                 בין מינוס 2<sup>7</sup> לבין 2<sup>7</sup> פחות אחד.<br>
@@ -306,7 +307,7 @@
         <h3 class="head-right">float</h3>
         <div class="row">
             <div class="col-md-6">
-                <div class="para">
+                <div class="First-Para">
                     <p>
                         משתנה מסוג float זהה למשתנה מסוג double , ההבדל בין סוגי משתנים אלה זה שfloat נותן לנו עד 7
                         מספרים
@@ -332,7 +333,7 @@
 
         <div class="row">
             <div class="col-md-6">
-                <div class="para">
+                <div class="First-Para">
                     <p>
 
                         בדומה ל int ו double גם את float אפשר להגדיר כ signed אבל בשפת C אי אפשר להגדיר אותו עם unsigned
@@ -356,7 +357,7 @@
                 </figure>
             </div>
         </div>
-        <div class="para">
+        <div class="First-Para">
             <br>טווח מספרים- כאשר אנחנו משתמשים ב float טווח המספרים שלו נע בין מינוס
             <span dir="ltr">3.40282x10<sup>38</sup></span>
             לבין <span dir="ltr">3.40282x10<sup>38</sup></span>.
@@ -368,7 +369,7 @@
         <h3 class="head-right">short</h3>
         <div class="row">
             <div class="col-md-6">
-                <div class="para">
+                <div class="First-Para">
                     <p>
                         הצהרה - כאשר אנחנו רוצים ליצור משתנה מסוג short אנחנו נרשום את הקוד הבא:
                     </p>
@@ -390,7 +391,7 @@
         <br>
         <div class="row">
             <div class="col-md-6">
-                <div class="para">
+                <div class="First-Para">
                     <p>
 
                         גם כאן short אפשר להצהיר עליו עם signed ו unsigned וזה יתבצע בדרך הבאה:
@@ -411,7 +412,7 @@
                 </figure>
             </div>
         </div>
-        <div class="para">
+        <div class="First-Para">
             <p>
                 טווח - טווח המספרים של short רגיל הוא בין 32,767 לבין 32,768- ו unsigned short נע בין 0 ל 65,535
             </p>
