--- a/statments.html
+++ b/statments.html
@@ -114,26 +114,17 @@
             שלנו לא התקיים.
           </li>
         </ul>
-        לדוגמה:
-        <br>
-        printf = הפקודה שאנו מבצעים
-        <br>
-        "%d" = סוג המשתנה שאותו אנו מדפיסים (במקרה שלנו int)
-        <br>
-        x = שם המשתנה שאותו אנו מדפיסים
-        <br>
-        אפשר לחשוב שבאמצעות הקוד שלנו אנחנו בעצם אומרים – תדפיס את הערך של int בשם x.
-        <br>
       </p>
     </div>
     <!--Second paragraph-->
+    <br>
 
+    <h3 class="head-right">נראה דוגמה במילים ולאחר מכן נפתור אותה בקוד:</h3>
     <div class="row">
       <div class="col-md-6">
         <div class="para">
           <p>
-            נראה דוגמה במילים ולאחר מכן נפתור אותה בקוד: <br>
-            נניח שאנחנו בודקים האם גילו של אדם הוא מספיק מבוגר כדי לעלות על מתקן בלונה פארק ונניח שגילו המינימלי של אדם
+                        נניח שאנחנו בודקים האם גילו של אדם הוא מספיק מבוגר כדי לעלות על מתקן בלונה פארק ונניח שגילו המינימלי של אדם
             שעולה על המתקן צריך להיות 15. <br>
             ז"א - כדי שאדם יוכל לעלות על המתקן אנו נצטרך לוודא שהוא לפחות בן 15.
             <br>
