--- a/oneDimLoops.html
+++ b/oneDimLoops.html
@@ -110,11 +110,11 @@
           <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
 <b>void</b> main()
 {
-  printf(<u>"1"</u>);
-  printf(<u>"2"</u>);
-  printf(<u>"3"</u>);
-  printf(<u>"4"</u>);
-  printf(<u>"5"</u>);
+  printf(<u>"1\n"</u>);
+  printf(<u>"2\n"</u>);
+  printf(<u>"3\n"</u>);
+  printf(<u>"4\n"</u>);
+  printf(<u>"5\n"</u>);
 }    
             </code></pre>
         </figure>
@@ -163,7 +163,7 @@
   <b>int</b> i;
   <b>for</b>(i=0 ; i &lt; 5 ;i++)
   {
-    printf(<u>"%d"</u>, i);
+    printf(<u>"%d\n"</u>, i);
   }
 }  
           </code></pre>
