--- a/twoDimLoops.html
+++ b/twoDimLoops.html
@@ -106,11 +106,11 @@
           <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
 <b>void</b> main()
 {
-  printf(<u>"*"</u>);
-  printf(<u>"**"</u>);
-  printf(<u>"***"</u>);
-  printf(<u>"****"</u>);
-  printf(<u>"*****"</u>);
+  printf(<u>"*/n"</u>);
+  printf(<u>"**/n"</u>);
+  printf(<u>"***/n"</u>);
+  printf(<u>"****/n"</u>);
+  printf(<u>"*****/n"</u>);
 
 }
             </code></pre>
@@ -194,26 +194,3 @@
 
 </html>
 
-
-<!--
-
-
-
-   
-
- 
-
-
--->
-
-<!--
-
-
-
--->
-
-<!--
-
-
-
--->
