--- a/functions.html
+++ b/functions.html
@@ -67,9 +67,12 @@
         בסוף.
         <br>
         פונקציות מאוד נוחות לעבודה משום שהן עוזרות לנו לכתוב פחות קוד מיותר.
-        <br>
+
       </p>
     </div>
+
+
+    <br>
 
     <div class="row">
 
@@ -78,12 +81,15 @@
         <div class="para">
 
           <p>
-
-            נראה תוכנית שלוקחת חמישה תלמידים – בודקת מה הממוצע שלהם ולאחר מכן בודקת כמה תלמידים נמצאים מעל הממוצע , מתחת
+            נראה תוכנית שלוקחת חמישה תלמידים – בודקת מה הממוצע שלהם ולאחר מכן בודקת כמה תלמידים נמצאים מעל הממוצע, מתחת
             לממוצע
             ובדיוק על הממוצע:
           </p>
 
+          <p>
+            אז מה יש לנו פה ?
+            הרבה קוד שלא מאוד קריא ולא הכי נוח לעבוד איתו.
+          </p>
 
         </div>
         <!--para-->
@@ -147,10 +153,6 @@
         <div class="para">
 
           <p>
-
-            אז מה יש לנו פה ?
-            הרבה קוד שהוא לא מאוד קריא ולא הכי נוח לעבוד איתו.
-            <br>
             דוגמה איך אפשר לעשות את זה קצת יותר פשוט לקריאה:
 
           </p>
