--- a/arrays.html
+++ b/arrays.html
@@ -209,14 +209,14 @@
       יתרונות במערך סטטי:
       <ol>
         <li>
-          עשוי לחסוך לנו הרבה מאוד זמן ביצירת משתנים (למשל כמו בדוגמה הראשונה ,
-          30 משתנים בעלי אותו<br> התפקיד – נכנסים טוב בתוך מערך יחיד בגודל 30).
+          עשוי לחסוך לנו הרבה מאוד זמן ביצירת משתנים (למשל כמו בדוגמה הראשונה,
+          30 משתנים בעלי אותו התפקיד – נכנסים טוב בתוך מערך יחיד בגודל 30).
         </li>
         <li>
           הופך את הקוד לקריא יותר (משתנה אחד , קצר מ30 משתנים)
         </li>
         <li>
-          . הגישה אליו מאוד נוחה , רק צריך לגשת באמצעות אינדקס מספרי
+          הגישה אליו מאוד נוחה, רק צריך לגשת באמצעות אינדקס מספרי.
         </li>
       </ol>
       <br>
