--- a/twoDimArrays.html
+++ b/twoDimArrays.html
@@ -66,7 +66,9 @@
           דו ממדי.
           תפקידו של מבנה זה הוא לאחסן נתונים במעין טבלה.
           אל הטבלה ניגש בצורה הבאה:
-          mat[x][y]
+          <br>
+          <span dir="ltr">mat[x][y];</span>
+          <br>
           כפי שראינו אם הטבלה אנו ניגשים בעזרת שני אינדקסים (נהוג i,j) נראה איך זה נראה מאחורי הקלעים:
           <br>
 
@@ -118,7 +120,7 @@
             <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
   <b>void</b> main()
   {
-    <b>int</b>i ,j ,sum;
+    <b>int</b> i ,j ,sum;
     sum = 0;
 
     <b>for</b>(i=0; i&lt;4; i++)
@@ -159,7 +161,7 @@
         <div class="col-md-6">
   
           <figure class="code">
-            <figcaption id="example1-caption">CODE 1:</figcaption>
+            <figcaption id="example1-caption">CODE 2:</figcaption>
             <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"> <b>void</b> printMat(<b>int</b> **arr ,<b>int</b> row ,<b>int</b> col)
 {
   <b>int</b> i = 0 ,j = 0;
